links de inscrição

--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
                 </p>
             </div>
             <div class="right">
-                <h2><img src="images/submissao_icon.png" alt=""> Submissão de Artigos</h2>
+                <h2><img src="images/submissao_icon.png" alt=""> Inscrição de Trabalhos</h2>
                 <p class="conteudo">
                     Inscreva o seu trabalho até 02/04/2024.<br>
 
                     <a href="https://forms.gle/djAaeVXx7yV1QBaF6" target="_blank"><button class="btnGrande submeter">INSCREVER TRABALHO</button></a>
-                    <a href="#" target="_blank"><button class="btnGrande regras">REGRAS DE INSCRIÇÃO</button></a>
+                    <a href="edital_acinnet2024.pdf" target="_blank"><button class="btnGrande regras">REGRAS DE INSCRIÇÃO</button></a>
                 </p>
             </div>
         </div>
@@ -224,7 +224,8 @@
             </p> -->
 
             <div class="wrapBtns">
-                <a href="#" target="_blank"><button>Em Breve</button></a>
+                <a href="https://bit.ly/congressoacinnet_1206" target="_blank"><button>📅 12/06</button></a>
+                <a href="https://bit.ly/congressoacinnet_1306" target="_blank"><button>📅 13/06</button></a>
             </div>
         </div>
     </section>
